[package]
name = "rjv"
version = "0.1.8"
edition = "2021"
authors = ["Kelley van Evert <hello@klve.nl>"]
license = "GPL-3.0-or-later"
homepage = "https://klve.nl"
description = "Rust, JS, VST"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { path = "../nih-plug", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "../nih-plug", default_features = false, features = ["assert_process_allocs"] }
nih_plug_egui = { path = "../nih-plug/nih_plug_egui" }
nih_plug_vizia = { path = "../nih-plug/nih_plug_vizia" }
js-sandbox = "0.1.6"
atomic_float = "0.1"
druid = "0.8.3"
druid-shell = "0.8.3"
crossbeam = "0.8.2"
serde = "1"
parking_lot = "0.12.1"
vizia = { git = "https://github.com/robbert-vdh/vizia.git", branch = "patched", default_features = false, features = [
  "baseview",
  "clipboard",
  "x11",
] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
