[package]
name = "rjv"
version = "0.1.8"
edition = "2021"
authors = ["Kelley van Evert <hello@klve.nl>"]
license = "GPL-3.0-or-later"
homepage = "https://klve.nl"
description = "Rust, JS, VST"

[workspace]
members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { path = "../nih-plug", features = [
  "assert_process_allocs",
  "standalone",
] }
nih_plug_egui = { path = "../nih-plug/nih_plug_egui" }
egui = { version = "0.19", default-features = false }
js-sandbox = "0.1.6"
atomic_float = "0.1"
enum-map = { version = "2", features = ["serde"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
